<resources>
    <string name="app_name">Shows-saratedd</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shows">Shows</string>
    <string name="empty_state_message">Your shows are not showing. Get it?</string>
    <string name="load_shows_text">Load shows</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_yet">No reviews yet.</string>
<!--    <string name="write_a_review_button">Write a review</string>-->
    <string name="write_a_review">Write a review</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="login_note_text">In order to continue please log in.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="logout_alert_message">Are you sure you want to logout?</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="no_net_reviews">There is no internet connection. Please turn on your internet to write a review.</string>
    <string name="no_net_picture">There is no internet connection. Please turn on your internet to change your profile picture.</string>
    <string name="no_net">There is no internet connection. Please check your internet connection and try again.</string>
    <string name="comment">Comment</string>
</resources>