<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".show_details.ShowDetailsFragment">

        <ImageView
            android:id="@+id/detailsBackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:src="@drawable/ic_back_vector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsBackButton"
            tools:text="The Office" />

        <androidx.cardview.widget.CardView
            android:id="@+id/detailsCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsTitle">

            <ImageView
                android:id="@+id/detailsImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_office" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/detailsDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsCard"
            tools:text="The Office is an American mockumentary sitcom television series that depicts the everyday work lives of office employees in the Scranton, Pennsylvania, branch of the fictional Dunder Mifflin Paper Company. It aired on NBC from March 24, 2005, to May 16, 2013, lasting a total of nine seasons." />

        <ProgressBar
            android:id="@+id/detailsProgressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--            android:visibility="gone"-->

        <TextView
            android:id="@+id/detailsReviewsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/reviews"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsDesc" />

        <TextView
            android:id="@+id/detailsData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:textAllCaps="true"
            android:textColor="@color/dark_grey"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsReviewsTitle"
            tools:text="3 reviews, 3.67 average" />
        <!--    zvijezde reviews-->
        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/RatingBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:numStars="5"
            android:progressBackgroundTint="@color/grey"
            android:progressTint="@color/purple"
            android:secondaryProgressTint="@color/white"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsData"
            tools:rating="1" />
        <!--    recyclerview-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailsRecycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/detailsReviewsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBar"
            tools:listitem="@layout/item_review" />

        <!--    empty state-->

        <TextView
            android:id="@+id/detailsReviewsMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:gravity="center"
            android:text="@string/no_reviews_yet"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/detailsReviewsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsReviewsTitle" />
        <!--        android:visibility="gone"-->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/detailsReviewsButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/purple"
            android:text="@string/write_a_review"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

